fixed spacing around buttons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,7 @@ h1 {
 #update-post,
 #delete-post {
     width: 90%;
-    margin: 20px 20px 0px 20px;
+    margin: 20px 20px 40px 20px;
     background-color: rgb(52, 156, 247);
     color: lightgreen;
     padding: 20px 0px 20px 0px;
